airs\feat(front): #3156.4 new skims page
- Added Download DataSheet section


Former-commit-id: d2e270c266944b4affe32b919c15a0c090e1a3cf

--- a/airs/theme/2020/templates/products/skims.html
+++ b/airs/theme/2020/templates/products/skims.html
@@ -243,12 +243,26 @@
     </div>
   </div>
 </div>
-<div class="mw-1366 ph-body center pt5">
+<div class="mw-1366 ph-body center pv5">
   <h2 class="roboto c-fluid-bk f1 fw6 tc">
     Key Features
   </h2>
   <div class="product-features justify-center items-center flex flex-wrap roboto">
     {{ page.content }}
+  </div>
+</div>
+<div class="mw-1366 center ph-body roboto tc pb6">
+  <div class="w-100 tc">
+    <img
+      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/skims/skims-datasheet.png"
+      alt="Young hacker smiling">
+  </div>
+  <div class="tc">
+    <a href="https://fluidattacks.docsend.com/view/ftgmc53d9e5c6m33">
+      <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv3 ph4 roboto fw7 f4 dib bt-trans br2 bc-fluid-red ba">
+        Download DataSheet
+      </button>
+    </a>
   </div>
 </div>
 {% endblock content %}
