airs\feat(front): #3149.2 add skims to landing
- Added skims in the products section in the home


Former-commit-id: 331ca737ce3443b261b4cbe369fbb07f33faf866

--- a/airs/theme/2020/templates/landing.html
+++ b/airs/theme/2020/templates/landing.html
@@ -120,7 +120,7 @@
         <div class="w-50-l fl-l tc">
           <img
           data-aos="zoom-in"
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-drills.png"
+          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-skims.png"
           alt="Young hacker smiling">
         </div>
         <div class="w-45-l fr-l tr-l tc mw6">
@@ -131,12 +131,45 @@
               src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/mini-logo.png"
               alt="Fluid Attacks Small Logo">
             </i>
-            drills
+            skims
           </h2>
           <h3 class="c-fluid-bk roboto fw7 f4 mv0 tr-l tc lh-18">
-            The Human Element that Continuously Detects Vulnerabilities
+            The SAST Element that Identifies Superficial Vulnerabilities
           </h3>
           <p class="c-fluid-bk roboto fw1 f5 lh-2 tr-l tl">
+            <strong class="b">Skims</strong> is a SAST tool that searches and
+            detects superficial or peripheral vulnerabilities in your IT systems
+            at high speed. It can also automatically verify whether
+            vulnerabilities have been successfully repaired.
+          </p>
+          <a class="c-fluid-bk no-underline hv-fluid-dkred f5 roboto fw1" href="{{ SITEURL }}/products/skims/">
+            Learn More <span class="c-dkred">></span>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="section-height center justify-center items-center flex flex-wrap">
+      <div>
+        <div class="w-50-l fr-l tc">
+          <img
+          data-aos="zoom-in"
+          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-drills.png"
+          alt="Young hacker smiling">
+        </div>
+        <div class="w-45-l fl-l tl-l tc mw6">
+          <h2 class="f1 fw6 c-fluid-bk roboto mv3">
+            <i>
+              <img
+              class="nb2"
+              src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/mini-logo.png"
+              alt="Fluid Attacks Small Logo">
+            </i>
+            drills
+          </h2>
+          <h3 class="c-fluid-bk roboto fw7 f4 mv0 tl-l tc lh-18">
+            The Human Element that Continuously Detects Vulnerabilities
+          </h3>
+          <p class="c-fluid-bk roboto fw1 f5 lh-2 tl">
             <strong class="b">Drills</strong> uses the right combination
             of technology and human intelligence
             to find deep and zero-day vulnerabilities
@@ -151,13 +184,13 @@
     </div>
     <div class="section-height center justify-center items-center flex flex-wrap">
       <div>
-        <div class="w-50-l fr-l tc">
+        <div class="w-50-l fl-l tc">
           <img
           data-aos="zoom-in"
           src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/product-forces.png"
           alt="Young hacker smiling">
         </div>
-        <div class="w-45-l fl-l tl-l tc mw6">
+        <div class="w-45-l fr-l tr-l tc mw6">
           <h2 class="f1 fw6 c-fluid-bk roboto mv3">
             <i>
               <img
@@ -167,10 +200,10 @@
             </i>
             forces
           </h2>
-          <h3 class="c-fluid-bk roboto fw7 f4 mv0 tl-l tc lh-18">
+          <h3 class="c-fluid-bk roboto fw7 f4 mv0 tr-l tc lh-18">
             The Robot Element that Breaks the Build to Force Remediation
           </h3>
-          <p class="c-fluid-bk roboto fw1 f5 lh-2 tl">
+          <p class="c-fluid-bk roboto fw1 f5 lh-2 tr-l tl">
             <strong class="b">Forces</strong> allows you to implement
             DevSecOps into your project.
             It breaks the build to force the remediation
