airs\refac(cross): #3158 new drills page design
- Update drills page to the new design


Former-commit-id: a629f58126a462d71514fc70cdd07626162b8f1b

--- a/airs/theme/2020/static/scss/base.scss
+++ b/airs/theme/2020/static/scss/base.scss
@@ -1092,3 +1092,9 @@ video {
   width: 30%;
   border-bottom: 4px solid $button-hover;
 }
+
+.drills-features.product-features {
+  .sect2 {
+    min-height: 470px !important;
+  }
+}
