--- a/airs/theme/2020/templates/products/drills.html
+++ b/airs/theme/2020/templates/products/drills.html
@@ -69,154 +69,193 @@
 {% endblock header %}
 
 {% block content %}
-<div class="tc pt3">
+<div class="tc pt3 flex nowrap items-center justify-center overflow-x-auto">
   <ul class="pl0">
-    <li class="dib pr4-l pr3-m pr2">
+    <li class="dib ph2">
       <a href="{{ SITEURL }}/products/integrates/"
-         class="c-fluid-gray f4 roboto no-underline fw3">
-        1. Integrates
+         class="c-fluid-gray f4 roboto fw7 no-underline hv-fluid-bk">
+        Integrates
       </a>
     </li>
-    <li class="dib pr4-l pr3-m pr2">
-      <img loading="lazy" class="w1 h1 nbs"
-        src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/line-menu.svg"
-        alt="Young hacker smiling">
+    <li class="dib ph2">
       <a href="{{ SITEURL }}/products/drills/"
-      class="c-lightblack f4 roboto fw4 pointer no-underline">
-        2. Drills
+      class="c-fluid-gray f4 roboto fw7 no-underline">
+        drills
       </a>
     </li>
-    <li class="dib">
+    <li class="dib ph2 bb bc-hover-red bw2">
+      <a href="{{ SITEURL }}/products/drills/"
+      class="c-lightblack f4 roboto no-underline fw7 hv-fluid-bk">
+        Drills
+      </a>
+    </li>
+    <li class="dib ph2">
       <a href="{{ SITEURL }}/products/forces/"
-      class="c-fluid-gray f4 roboto no-underline fw3">
-        3. Forces
+      class="c-fluid-gray f4 roboto no-underline fw7 hv-fluid-bk">
+        Forces
       </a>
     </li>
   </ul>
 </div>
-<div class="tc roboto w-100 center c-lightblack pb6">
-  <p class="tl fw1 w-40-l w-50-m w90-s center f3 lh-2">
+<div class="flex justify-center items-center ph-body">
+  <div class="mw7 center">
+    <p class="roboto f3-l f4 fw3 lh-2">
     The rigorous inspection carried out makes it possible to detect all security
     issues with no false positives and no false negatives, and to check if the
     issues have been properly repaired before the system goes into production.
     Through human creativity and precision, combined with the speed of the
     automatic, Drills finds deep and zero-day vulnerabilities during software
     development.
-  </p>
-  <div class="tc pt4">
-    <a class="roboto fw1 f5 no-underline c-fluid-bk hv-fluid-dkred"
-       href="{{ SITEURL }}/contact-us/">
-      <span class="br2 bannerbt hv-bt-fluid-rd bt-pd contact-pd bt-trans white b roboto pointer mt2">
+    </p>
+    <div class="center tc">
+      <a class="no-underline tc f3 menu-txt-trans roboto hv-fluid-rd "
+      href="{{ SITEURL }}/contact-us/">
+        <button class="tc outline-transparent fw7 br2 bw1 ph5 pv2 bg-transparent bc-fluid-red ba hv-fluid-rd hv-fluid-bd bt-trans c-dkred pointer">
           Get a Quote
-      </span>
+        </button>
+      </a>
+    </div>
+  </div>
+</div>
+<h2 class="roboto c-fluid-bk f1 fw6 tc pt6">Key Benefits</h2>
+<div class="w-100 flex-l pv4">
+  <div class="w-100">
+    <div class="w-50-l fl-l tl ph0-ns ph4" data-aos="fade-right">
+      <img
+      class="dn show-xl"
+      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/drills/drills-screen-1-xl.png"
+      alt="Young hacker smiling">
+      <img
+      class="dn show-l"
+      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/drills/drills-screen-1-l.png"
+      alt="Young hacker smiling">
+      <img
+      class="dn show-ml"
+      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/drills/drills-screen-1-ml.png"
+      alt="Young hacker smiling">
+      <img
+      class="dn show-m"
+      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/drills/drills-screen-1-m.png"
+      alt="Young hacker smiling">
+      <img
+      class="dn show-s"
+      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/drills/drills-screen-1-s.png"
+      alt="Young hacker smiling">
+    </div>
+    <div class="w-50-l fr-l ph0-l ph4">
+      <ul class="tl roboto list pl0 mw-20">
+        <li class="c-fluid-bk pv3">
+          <h3 class="f3 fw6 mv0">
+            High Performed
+          </h3>
+          <p class="f5 fw3 mv0 lh-copy">
+            Performed on code, environments, infrastructure and clouds.
+          </p>
+        </li>
+        <li class="c-fluid-bk pv3">
+          <h3 class="f3 fw6 mv0">
+            Deep Searching
+          </h3>
+          <p class="f5 fw3 mv0 lh-copy">
+            Maximum rigor in the search of vulnerabilities.
+          </p>
+        </li>
+        <li class="c-fluid-bk pv3">
+          <h3 class="f3 fw6 mv0">
+            Real Results
+          </h3>
+          <p class="f5 fw3 mv0 lh-copy">
+            Forget about false positives and false negatives.
+          </p>
+        </li>
+        <li class="c-fluid-bk pv3">
+          <h3 class="f3 fw6 mv0">
+            Findings
+          </h3>
+          <p class="f5 fw3 mv0 lh-copy">
+            Find Zero-Day vulnerabilities.
+          </p>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+<div class="w-100 flex pv4">
+  <div class="w-100">
+    <div class="w-50-l fr-l tr ph0-ns ph4" data-aos="fade-left">
+      <img
+      class="dn show-xl fr"
+      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/drills/drills-screen-2-xl.png"
+      alt="Young hacker smiling">
+      <img
+      class="dn show-l fr"
+      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/drills/drills-screen-2-l.png"
+      alt="Young hacker smiling">
+      <img
+      class="dn show-ml fr"
+      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/drills/drills-screen-2-ml.png"
+      alt="Young hacker smiling">
+      <img
+      class="dn show-m ml-auto"
+      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/drills/drills-screen-2-m.png"
+      alt="Young hacker smiling">
+      <img
+      class="dn show-s"
+      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/drills/drills-screen-2-s.png"
+      alt="Young hacker smiling">
+    </div>
+    <div class="w-50-l fl-l ph0-l ph4">
+      <ul class="tr-l tl roboto list pl0 mw-20 fr-l">
+        <li class="c-fluid-bk pv3">
+          <h3 class="f3 fw6 mv0">
+            Remediation
+          </h3>
+          <p class="f5 fw3 mv0 lh-copy">
+            Obtain a higher rate of remediation and at a faster speed since
+            feedback from Fluid Attacks' security analysts is constant
+            throughout the development cycle.
+          </p>
+        </li>
+        <li class="c-fluid-bk pv3">
+          <h3 class="f3 fw6 mv0">
+            Evidence
+          </h3>
+          <p class="f5 fw3 mv0 lh-copy">
+            Obtain detailed evidence of the vulnerabilities found.
+          </p>
+        </li>
+        <li class="c-fluid-bk pv3">
+          <h3 class="f3 fw6 mv0">
+            Accessibility
+          </h3>
+          <p class="f5 fw3 mv0 lh-copy">
+            Obtain access to the extracted information.
+          </p>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+<div class="mw-1366 ph-body center pv5">
+  <h2 class="roboto c-fluid-bk f1 fw6 tc">
+    Key Features
+  </h2>
+  <div class="drills-features product-features justify-center items-center flex flex-wrap roboto">
+    {{ page.content }}
+  </div>
+</div>
+<div class="mw-1366 center ph-body roboto tc pb6">
+  <div class="w-100 tc">
+    <img
+      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/drills/datasheet-drills.png"
+      alt="Young hacker smiling">
+  </div>
+  <div class="tc">
+    <a href="https://fluidattacks.docsend.com/view/dwz4jbxryn54k4mc">
+      <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv3 ph4 roboto fw7 f4 dib bt-trans br2 bc-fluid-red ba">
+        Download DataSheet
+      </button>
     </a>
   </div>
 </div>
-<div class="w-100 center">
-  <h1 class="c-lightblack b f-benefits roboto tc ma0">
-    Key Benefits
-  </h1>
-</div>
-
-<div class="mw-1366 ph-body center pb5">
-  <div class="carousel overflow-y-hidden overflow-x-auto w-auto pa2 nowrap pv5"
-       id="carousel">
-    <div class="item-carousel ml4-l ml6 mr4 pa0 dib v-top">
-      <img
-        src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/drills/drills-1.png"
-        alt="Young hacker smiling">
-        <p class="roboto fw1 c-lightblack f5 lh-2">
-          Performed on code, environments, <br>
-          infrastructure and clouds.
-        </p>
-    </div>
-    <div class="item-carousel mh4 pa0 dib v-top">
-      <img
-        src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/drills/drills-2.png"
-        alt="Young hacker smiling">
-        <p class="roboto fw1 c-lightblack f5 lh-2">
-          Maximum rigor in the search for <br>
-          vulnerabilities.
-        </p>
-    </div>
-    <div class="item-carousel mh4 pa0 dib v-top">
-      <img
-        src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/drills/drills-3.png"
-        alt="Young hacker smiling">
-        <p class="roboto fw1 c-lightblack f5 lh-2">
-          Forget about false positives and <br>
-          false negatives.
-        </p>
-    </div>
-    <div class="item-carousel mh4 pa0 dib v-top">
-      <img
-        src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/drills/drills-4.png"
-        alt="Young hacker smiling">
-        <p class="roboto fw1 c-lightblack f5 lh-2">
-          Find Zero-Day vulnerabilities.
-        </p>
-    </div>
-    <div class="item-carousel mh4 pa0 dib v-top">
-      <img
-        src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/drills/drills-5.png"
-        alt="Young hacker smiling">
-        <p class="roboto fw1 c-lightblack f5 lh-2">
-          Obtain a higher rate of remediation <br>
-          and at a faster speed since feedback <br>
-          from Fluid Attacks’ security analysts <br>
-          is constant throughout the development <br>
-          cycle.
-        </p>
-    </div>
-    <div class="item-carousel mh4 pa0 dib v-top">
-      <img
-        src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/drills/drills-6.png"
-        alt="Young hacker smiling">
-        <p class="roboto fw1 c-lightblack f5 lh-2">
-          Obtain detailed evidence of the <br>
-          vulnerabilities found.
-        </p>
-    </div>
-    <div class="item-carousel ml4 pa0 dib v-top">
-      <img
-        src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/drills/drills-7.png"
-        alt="Young hacker smiling">
-        <p class="roboto fw1 c-lightblack f5 lh-2">
-          Obtain access to the extracted <br>
-          information.
-        </p>
-    </div>
-  </div>
-  <div class="w5 h-cont-bar bg-fluid-lightgray center mw5 br4 ba bc-lightergray">
-    <div class="h-bar w1 bg-dk-red mw5 br4" id="progress-bar"></div>
-  </div>
-  <div class="w-100 roboto tc pv6">
-    <h1 class="c-lightblack b f2 roboto tc ma0">
-      Key Features
-    </h1>
-    {{ page.content }}
-  </div>
-  <div class="w-100 roboto tc pb6">
-    <img
-      class="w6"
-      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/drills/datasheet-drills.png"
-      alt="Young hacker smiling">
-      <h1 class="c-lightblack f2-l fw7 tc f3 center roboto">
-        Do you want to know more about Drills?
-      </h1>
-      <a class="no-underline c-fluid-bk" href="https://fluidattacks.docsend.com/view/dwz4jbxryn54k4mc">
-        <button class="f2-l fw1 tc f4 center roboto download-btn bg-transparent bn pointer">
-          Download DataSheet  <span><img loading="lazy" class="w2-ns w1" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/download.svg" alt="Young hacker smiling"></span>
-        </button>
-      </a>
-  </div>
-</div>
-{% assets output="static/js/progressBar.min.js", "js/tmp/progressBar.min.js" %}
-<script type="text/javascript"
-        src="{{ SITEURL }}/{{ ASSET_URL }}"></script>
-{% endassets %}
-{% assets output="static/js/carousel.min.js", "js/tmp/carousel.min.js" %}
-<script type="text/javascript"
-        src="{{ SITEURL }}/{{ ASSET_URL }}"></script>
-{% endassets %}
 {% endblock content %}
